Fixed overflow settings to make menu visible always

--- a/jsoneditor/static/django-jsoneditor/django-jsoneditor.css
+++ b/jsoneditor/static/django-jsoneditor/django-jsoneditor.css
@@ -2,3 +2,7 @@ div .outer_jsoneditor {
     float: left;
     width: 100%;
 }
+
+.form-row {
+    overflow: visible;
+}
